working responsive image carousel

--- a/src/portfolio_images/robot_design/final/final.mdx
+++ b/src/portfolio_images/robot_design/final/final.mdx
@@ -1,1 +1,1 @@
-This is the final render composited in marmoset render.
+This is the final render composited in Marmoset Render and shown here in browser with Marmoset Viewer.
