--- a/src/portfolio_images/robot_design/wip/wip.mdx
+++ b/src/portfolio_images/robot_design/wip/wip.mdx
@@ -1,8 +1,4 @@
 import img from './images/robot_wip_1.PNG';
 
-<div>{props.test}</div>
-
-<div>{props.imageGallery}</div>
-
-<div>{props.testFunction()}</div>
+<div>{props.ImageGallery}</div>
 
