fixed file size

--- a/src/portfolio_images/fashion_design/final/final.mdx
+++ b/src/portfolio_images/fashion_design/final/final.mdx
@@ -1,4 +1,9 @@
 import mview from './images/clothes_1.mview';
 
+This is a final render view exported from Marmoset Renderer's viewer. The textures are in 4K. The window can be manipulated by:
+
+**left-click drag**: **rotation**,
+**right-click drag**: **pan**,
+**scroll-wheel**: **zoom**
 
 <div>{props.MarmosetViewer}</div>
