--- a/src/portfolio_images/fashion_design/process/process.mdx
+++ b/src/portfolio_images/fashion_design/process/process.mdx
@@ -6,4 +6,4 @@ After retopologizing and UVing my low poly mesh, I took it into Zbrush where I s
 
 Once that was completed, I exported both the low poly and high poly models of each clothing piece to Marmoset Renderer. There, I baked normal, ambient occlusion, curvature, ID, thickness, and position maps for use in Substance Painter. The ability to use these maps along with Substance Painter's procedural generators greatly helped to reduce the amount of hand-painting required.
 
-I chose to add an opacity channel for the inner dress as well as the outer shoulder frills as I wanted to give a slightly sheer, transparent fabric feeling. Afterwards, I exported all the textures and applied them on the low poly models in Marmoset Renderer.
+I chose to add an opacity channel for the inner dress and outer shoulder frills since I wanted to give a slightly sheer, transparent fabric feeling. Afterwards, I exported all the textures and applied them on the low poly models in Marmoset Renderer.
