added more WIP images

--- a/src/portfolio_images/segmentation/background/background.mdx
+++ b/src/portfolio_images/segmentation/background/background.mdx
@@ -1,3 +1,1 @@
-At the time, automatic annotation tools were on the roadmap for the company's proprietary technology named DeLTA-Lite. Augmentations to the DeLTA suite (DeLTA-Mark) for semi-supervised annotation was planned. In order to prepare for this, I compiled and wrote a report detailing my surveys of what techniques would be most promising for the aforementioned DeLTA-Mark. Unfortunately, my report was quite dense and technical, so the value it offered wasn't fully recognized.
-
-At a post-mortem meeting with my manager, Dr. Atsunori Kanemura, I offered to create an implementation that would allow users to try out the app for themselves. They would be able to take an image, upload it to the site I created, and then eventually receive an email notification with the full details of their segmentation. In addition, I added hyperparameter tuning features that made it possible for users to customize their segmentation settings.
+At the time, automatic annotation tools were on the roadmap for the company's proprietary technology named DeLTA-Lite. 
