added more images/descriptions

--- a/src/portfolio_images/kindle_scraper/overview/overview.mdx
+++ b/src/portfolio_images/kindle_scraper/overview/overview.mdx
@@ -1,1 +1,1 @@
-Since I have been living in Tokyo, Japan since the spring of 2016, I've achieved a decent level of Japanese fluency. Due to immersion, most of my entertainment (books, news, etc.) is in Japanese. During my commute and leisure time, I read Japanese novels using the Kindle application. This is an application that scans my Kindle notebooks for highlights, and then translates those kanji vocabularay into English. 
+Since I have been living in Tokyo, Japan since the spring of 2016, I've achieved a decent level of Japanese fluency. Due to immersion, most of my entertainment (books, news, etc.) is in Japanese. During my commute and leisure time, I read Japanese novels using the Kindle application. This personal project is a Java/Python application that scans my Kindle notebooks for highlights, and then translates those kanji vocabularay into English by querying [Jisho's api](https://jisho.org/). 
