--- a/src/portfolio_images/publications/final/final.mdx
+++ b/src/portfolio_images/publications/final/final.mdx
@@ -7,7 +7,7 @@ After the conference, my manuscript was fortunately selected as one of the top p
 
 The extended manuscript can be found [here](https://github.com/kudou-reira/portfolio/blob/master/src/portfolio_images/publications/final/images/Yeo_Feature_Descriptors_Extended_JSAI2020_Proceedings.pdf).
 
-JSAI 2020 was held this year due to the COVID-19 pandemic. My presentation video is not available to me, but a sample rehearsal presentation that I gave at an all-hands meeting at LeapMind is embedded here.
+JSAI 2020 was held online this year due to the COVID-19 pandemic. My presentation video is not available to me, but a sample rehearsal presentation that I gave at an all-hands meeting at LeapMind is embedded below.
 
 <ReactPlayer 
     url={videoURL} 
