--- a/src/portfolio_images/publications/overview/overview.mdx
+++ b/src/portfolio_images/publications/overview/overview.mdx
@@ -1,1 +1,1 @@
-During my time at LeapMind Inc. (Tokyo, Japan) as a machine learning engineer, I worked on an in-house survey of lightweight feature descriptors. Their purpose is to was extract features and their corresponding descriptors from images.
+During my time at LeapMind Inc. (Tokyo, Japan) as a machine learning engineer, I worked on an in-house survey of lightweight feature descriptors. Their purpose is to was extract features and their corresponding descriptors from images while also keeping the computational load low.
