--- a/src/portfolio_images/robot_design/final/final.mdx
+++ b/src/portfolio_images/robot_design/final/final.mdx
@@ -1,1 +1,3 @@
-This is the final render composited in Marmoset Render and shown here in browser with Marmoset Viewer.
+Below are final renders from Blender's Cycles. Color grading was done in Adobe Lightroom.
+
+<div>{props.ImageGallery}</div>
