--- a/src/portfolio_images/robot_design/overview/overview.mdx
+++ b/src/portfolio_images/robot_design/overview/overview.mdx
@@ -1,3 +1,3 @@
-This 3D project has been on-going for quite a while. It has taken about two years from start to finish as I continuously stop and re-start progress on it. As I have been living in Tokyo for the last four years, I was inspired by Odaiba's iconic Gundam in front of Diver City shopping center. However, a common style trend in Japanese mechanoid designs is that most of them consist of heavy armor plates with an occluded core. Since I have also been studying human anatomy and sculpting as well, I wanted to integrate a more human, lightweight shape language (i.e. skeletal frames, organic muscles) into my own mech design.
+This 3D project has been on-going for quite a while. It has taken about two years from start to finish as I continuously stop and re-start progress on it. As I have been living in Tokyo for the last four years, I was inspired by [Odaiba's iconic Gundam](https://www.google.com/search?q=odaiba%20gundam&oq=odaiba+gundam&aqs=chrome.0.69i59j46i175i199j0l2j46i175i199j0l3.1944j0j1&sourceid=chrome&ie=UTF-8&tbs=lf:1,lf_ui:10&tbm=lcl&sxsrf=ALeKk02Af1bC-CqjhzNI6xIbjQzGd8XYAA:1606009000671&rflfq=1&num=10&rldimm=16300115339830217555&lqi=Cg1vZGFpYmEgZ3VuZGFtSPPRuYrQq4CACFobCgZndW5kYW0QARgBIg1vZGFpYmEgZ3VuZGFt&phdesc=xeDsbQOsgkk&ved=2ahUKEwicovbfgZXtAhVX7WEKHWwoAPQQvS4wAHoECAEQMQ&rlst=f#rlfi=hd:;si:16300115339830217555,l,Cg1vZGFpYmEgZ3VuZGFtSPPRuYrQq4CACFobCgZndW5kYW0QARgBIg1vZGFpYmEgZ3VuZGFt,y,xeDsbQOsgkk;mv:[[35.7310647,139.78709999999998],[35.618470599999995,139.59315279999998]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!1m4!1u16!2m2!16m1!1e1!1m4!1u16!2m2!16m1!1e2!2m1!1e2!2m1!1e16!2m1!1e3!3sIAE,lf:1,lf_ui:10) in front of Diver City shopping center. However, a common style trend in Japanese mechanoid designs is that most of them consist of heavy armor plates with an occluded core. Since I have also been studying human anatomy and sculpting as well, I wanted to integrate a more human, lightweight shape language (i.e. skeletal frames, organic muscles) into my own mech design.
 
-**Tools used**: ZBrush 2020, Autodesk Maya 2020, Blender 2.83, MOI3D 3.0, Marmoset Renderer 3.0, Substance Painter 2020
+**Tools used**: ZBrush 2020, Autodesk Maya 2020, Blender 2.90, MOI3D 3.0, Substance Painter 2020, Adobe Lightroom
