--- a/src/portfolio_images/robot_design/process/process.mdx
+++ b/src/portfolio_images/robot_design/process/process.mdx
@@ -1,1 +1,3 @@
 To conceive the general shape of the robot, I went into ZBrush and quickly sculpted out a general form at a low dynamesh level. Once that was completed, I decimated that dynamesh into a very lightweight .obj file, then took it into Maya. The inner skeletal frames were created with a NURBS/CAD software named [MOI3D](http://moi3d.com/). Once the general frame shapes were created in MOI3D, I exported them to Maya. These skeletal frames became the structural basis upon which I started to craft out armor plates which would layer upon the frames. Once the armor was more or less in place, I started on putting together a series of mesh muscles that would then intertwine with the skeletal frames and armor in order to give the robot a bit more human-like form.
+
+The fox mask was sculpted in ZBrush primarily using the Zmodeler brush. It was the only piece of geometry that was UV unwrapped in Maya, then textured in Substance Painer. Once I was happy with the previewed general shapes using Arnold renderer in Maya, I transferred all of the robot to Blender. I did this for two reasons. First of all Blender's node system can generate UVs quickly, and offers a lot of control compared to that of Arnold and OCtane, my usually preferred render engines. Second of all, the node systems can be re-used. This helped me procedurally generate PBR textures quickly.
