--- a/src/portfolio_images/segmentation/background/background.mdx
+++ b/src/portfolio_images/segmentation/background/background.mdx
@@ -1,1 +1,3 @@
-At the time, automatic annotation tools were on the roadmap for the company's proprietary technology named DeLTA-Lite. 
+At the time, automatic annotation tools were on the roadmap for the company's proprietary technology named [DeLTA-Lite](https://leapmind.io/news/content/2160/). One of my main tasks was to investigate several techniques that could be useful for annotating purposes (i.e. labeling training data).
+
+At first I wrote a lengthy report about all the state-of-the-art segmentation techniques, and ranked them according to my own trial experiments and company use cases. However, this report alone wasn't effective enough as most other engineers were unable to clearly understand what I was trying to convey. At the post-mortem meeting, I offered to make a demo application showcasing the potential benefits of my inquiries. This project is the result of the initial failure to make an impact.
