--- a/src/portfolio_images/style_transfer/final/final.mdx
+++ b/src/portfolio_images/style_transfer/final/final.mdx
@@ -1,6 +1,8 @@
 import ReactPlayer from 'react-player'
 import videoURL from './images/style_transfer_presentation.mp4';
 
+Below is a recording of my hackathon presentation.
+
 <ReactPlayer 
     url={videoURL} 
     controls={true}
