added more fashion design renders

--- a/src/portfolio_images/fashion_design/final/final.mdx
+++ b/src/portfolio_images/fashion_design/final/final.mdx
@@ -1,6 +1,10 @@
 import view from './images/clothes_1.mview';
 
-This is a final render view exported from Marmoset Renderer's viewer. The textures are in 4K. The window can be manipulated by:
+Below are some shots of the final rendered clothes. Color grading was done in Adobe Lightroom.
+
+<div>{props.ImageGallery}</div>
+
+In addition, this is a final render view exported from Marmoset Renderer's viewer. The textures are in 4K. The window can be manipulated by:
 
 **left-click drag**: **rotation**,
 **right-click drag**: **pan**,
