--- a/src/portfolio_images/publications/background/background.mdx
+++ b/src/portfolio_images/publications/background/background.mdx
@@ -4,4 +4,4 @@ However, even the most powerful of the classical computer vision techniques such
 
 The company that I work for, LeapMind, primarily focuses on making machine learning available to everyone on edge devices. Deep learning frameworks such as TensorFlow and PyTorch have methods to optimize convolutional networks. In addition, there are many accelerator hardware techniques that may also be applied to speed up inference time. However, since I am mostly a software engineer, our approach to was to design a lightweight feature descriptor which would reduce the computational load enough without sacrificing too much accuracy.
 
-After various surveys of state-of-the-art deep learning feature descriptor techniques, we settled on )[RF-Net](https://arxiv.org/abs/1906.00604) as our target.
+After various surveys of state-of-the-art deep learning feature descriptor techniques, we settled on )[RF-Net](https://arxiv.org/abs/1906.00604) as our target framework.
