--- a/src/portfolio_images/home/process/process.mdx
+++ b/src/portfolio_images/home/process/process.mdx
@@ -2,4 +2,4 @@ When creating this site, I wanted to employ re-usable components which would ren
 
 To remedy this, I used [.mdx](https://github.com/mdx-js/mdx) files. An example [file](https://github.com/kudou-reira/portfolio/blob/master/src/portfolio_images/fashion_design/final/final.mdx) from this site's repository shows how JSX syntax (like the syntax used in React) can be integrated into markdown files. This gave me the right amount of automatic dynamic loading and additional custom modifications within each .mdx file.
 
-Most pages either include screenshots or videos. In the case of images, the files can be opened into a carousel, and then panned through with arrow keys.
+Most pages either include screenshots or videos. In the case of images, the files can be opened into a carousel, and then panned through with arrow keys. I set it up so that all my files are dynamically loaded at runtime, so I don't have to manually include/exclude images using HTML.
