--- a/src/portfolio_images/paintings/final/final.mdx
+++ b/src/portfolio_images/paintings/final/final.mdx
@@ -1,1 +1,3 @@
+Below are some paintings that I've finished this year. Most of the time, I never really finish 2D illustrations and prefer to work in 3D. However, I do switch it up every so often.
+
 <div>{props.ImageGallery}</div>
