edited about me page

--- a/src/portfolio_images/about/background/background.mdx
+++ b/src/portfolio_images/about/background/background.mdx
@@ -2,4 +2,4 @@ I was born in Escondido, California to my parents who had immigrated to the Unit
 
 I eventually taught myself computer science in Japan, and was subsequently hired at LeapMind, a Japanese start-up company specializing in machine learning on the edge. There, I started as a software engineer before becoming a machine learning engineer/researcher. As of Novemer 2020, I am still working at LeapMind.
 
-Besides my vocation, I'm heavily interested in CGI (computer generated imagery) and digital painting. Most of my free time is devoted to sculpting, 3D modeling, and concept art. Aside from that, my hobbies are photography, hiking, and reading books. I'm fluent in English (native), Mandarin, and Japanese.
+Besides my vocation, I'm heavily interested in CGI (computer generated imagery) and digital painting. Most of my free time is devoted to sculpting, 3D modeling, and concept art. Aside from that, my hobbies are photography, hiking, and reading books. I can speak English (native), Mandarin (fluent), and Japanese (conversational).
