--- a/src/portfolio_images/about/process/process.mdx
+++ b/src/portfolio_images/about/process/process.mdx
@@ -1,4 +1,4 @@
-If I could sum up my personal philosophy, it would start and end with obsession.
+If I could sum up my personal philosophy, it would start and end with obsession. If I'm completely enthralled by a topic, I can tolerate any kind of hardship because I need to know more.
 
 I've always been interested in learning various skills. I believe that versatility is a must for synthesizing new, creative ideas. However, the ability to make fantastical things a reality is paramount as well. The dreamer must be able to harmonize with the realist.
 
