--- a/src/portfolio_images/about/process/process.mdx
+++ b/src/portfolio_images/about/process/process.mdx
@@ -2,7 +2,7 @@ If I could sum up my personal philosophy, it would start and end with obsession.
 
 I've always been interested in learning various skills. I believe that versatility is a must for synthesizing new, creative ideas. However, the ability to make fantastical things a reality is paramount as well. The dreamer must be able to harmonize with the realist.
 
-It's the reason why I love art in all its mediums and why I also enjoy technology. I started my studies in the biomedical sciences, detoured to Japanese language studies, and now I'm employed as a machine learning researcher...all because I wanted to become an illustrator in Japan.
+It's the reason why I love art in all its mediums and why I also enjoy technology. I started my studies in the biomedical sciences, detoured to Japanese language studies, and now I'm employed as a machine learning engineer/researcher...all because I wanted to become an illustrator in Japan.
 
 As long as I have the fire to pursue whatever that interests me, I know I will succeed. The obsession I have will make everything fall into place even if I have no foreseeable plan. All that matters is the dream.
 
