--- a/src/portfolio_images/about/overview/overview.mdx
+++ b/src/portfolio_images/about/overview/overview.mdx
@@ -2,4 +2,4 @@ import pic from './images/yeo_profile_pic.jpg'
 
 <img src={pic} width={250} height={251} />
 
-This is profile picture of myself.
+My name is Yeo Ree Wang. This is a profile picture of myself.
