--- a/src/portfolio_images/fashion_design/overview/overview.mdx
+++ b/src/portfolio_images/fashion_design/overview/overview.mdx
@@ -1,3 +1,3 @@
-For a long time, I have always been interested in fashion trends, especially European and Japanese ones. As a result, I wanted to create clothing designs in 3D to test my skills as well as get familiar with current softwares such as Marvelous Designer.
+For a long time, I have always been interested in fashion trends, especially European and Japanese ones. As a result, I wanted to create clothing designs in 3D to test my design skills as well as get familiar with current softwares such as Marvelous Designer and Substance Designer. The textile pattern was created procedurally in Substance Designer.
 
 **Tools used**: ZBrush 2020, Autodesk Maya 2020, Marvelous Designer 9.0, Substance Designer, Substance Painter 2020, Marmoset Renderer 3.0, Adobe Lightroom
