--- a/src/portfolio_images/fashion_design/process/process.mdx
+++ b/src/portfolio_images/fashion_design/process/process.mdx
@@ -2,7 +2,7 @@ First, I re-used my low-poly mesh model from my human figure sculpting studies a
 
 Some users of Marvelous Designer use it purely for look and development purposes, so they do not need extremely clean topology for their renders. However, I had already planned to create a pattern material in Substance Designer. Thus, I needed some low poly clean quads in my mesh.
 
-After retopologizing and UVing my low poly mesh, I took it into Zbrush where I sculpted more details such as folds and wrinkles. I created layers at the highest subdivision level for each piece of clothing so I could control the relative strength of each sculpted detail.
+After retopologizing and UVing my low poly mesh, I took it into ZBrush where I sculpted more details such as folds and wrinkles. I created layers at the highest subdivision level for each piece of clothing so I could control the relative strength of each sculpted detail.
 
 Once that was completed, I exported both the low poly and high poly models of each clothing piece to Marmoset Renderer. There, I baked normal, ambient occlusion, curvature, ID, thickness, and position maps for use in Substance Painter. The ability to use these maps along with Substance Painter's procedural generators greatly helped to reduce the amount of hand-painting required.
 
