updated some about me files

--- a/src/portfolio_images/about/background/background.mdx
+++ b/src/portfolio_images/about/background/background.mdx
@@ -1,5 +1,7 @@
-I was born in Escondido, California to my parents who had immigrated to the United States from Taiwan long before I was born. I've lived in San Diego my entire life until 2016. At that time, I moved to Tokyo, Japan as I wanted to learn the language as well as change up the scenery of my every day life.
+I was born in Escondido, California to my parents who had immigrated from Taiwan to the United States long before I was born. I've lived in San Diego my entire life until 2016. At that time, I moved to Tokyo, Japan as I wanted to learn the language as well as change up the scenery of my every day life.
 
 I eventually taught myself computer science in Japan, and was subsequently hired at LeapMind, a Japanese start-up company specializing in machine learning on the edge. There, I started as a software engineer before becoming a machine learning engineer/researcher. As of Novemer 2020, I am still working at LeapMind.
 
-Besides my vocation, I'm heavily interested in CGI (computer generated imagery) and digital painting. Most of my free time is devoted to sculpting, 3D modeling, and concept art. Aside from that, my hobbies are photography, hiking, and reading books. I can speak English (native), Mandarin (fluent), and Japanese (conversational).
+Besides my vocation, I'm heavily interested in CGI (computer generated imagery) and digital painting. Most of my free time is devoted to sculpting, 3D modeling, and concept art. Aside from that, my hobbies are photography, hiking, and reading books. Recent books that I've read and enjoyed are *The Agony and the Ecstasy* (Irving Stone), *Mastery* (Robert Greene), and *The Things You Can See Only When You Slow Down* (Haemin Sunim).
+
+Language-wise, I can speak English (native), Mandarin (fluent), and Japanese (conversational).
