--- a/src/portfolio_images/about/process/process.mdx
+++ b/src/portfolio_images/about/process/process.mdx
@@ -6,4 +6,4 @@ It's the reason why I love art in all its mediums and why I also enjoy technolog
 
 As long as I have the fire to pursue whatever that interests me, I know I will succeed. The obsession I have will make everything fall into place even if I have no foreseeable plan. All that matters is the dream.
 
-Because of this, I believe that the first best teacher you can ever have is nature itself, and the second best teach you can ever have is yourself. Consequently, I have to invest in myself, and the best way to do that is to follow my interests.
+That being said, I believe that the first best teacher you can ever have is nature itself. The second best mentors are your failures. Consequently, I have to invest in myself, and the best way to do that is to follow my interests. And, my interests are my best works.
