updated with basilica sculpture

--- a/src/portfolio_images/octopus_study/overview/overview.mdx
+++ b/src/portfolio_images/octopus_study/overview/overview.mdx
@@ -1,3 +1,3 @@
 I wanted to get familiar with Unreal Engine, so I created a procedural octopus tentacle texture and rendered it out in Unreal Engine.
 
-**Tools used**: Substance Designer, Unreal Engine
+**Tools used**: Substance Designer, Unreal Engine, Adobe Lightroom
