--- a/src/portfolio_images/octopus_study/process/process.mdx
+++ b/src/portfolio_images/octopus_study/process/process.mdx
@@ -1,1 +1,3 @@
-I start off my 3D sketches in either Zbrush or 3DCoat, which is like 3D Adobe Photoshop. Recently, I've begun to favor Blender as well due to it having a revamped sculpting suite. This makes it so that I can quickly lay out basic shapes, then sculpt on them while trying to keep the number of faces very low poly. Once I'm satisfied with the general idea, I will begin to start the detailing phase.
+I created the octopus tentacle starting from a single segment of a tentacle with four suckers. These were then imported into another subgraph that would build a portion of a tentacle. These portions would then be compiled to form a single tentacle.
+
+Multiple subgraphs of whole tentacles were then combined in a final graph. These flat textures were then applied to flat planes in Unreal Engine, and vertex painted into the floor as well for blending.
