--- a/src/portfolio_images/basilica_sculpture/background/background.mdx
+++ b/src/portfolio_images/basilica_sculpture/background/background.mdx
@@ -1,1 +1,1 @@
-After coming back from traveling Europe multiple times, I had an idea of modeling a basilica and placing some of my own digital sculptures within it. I was inspired by the Winged Victory of Samothrace at the Louvre in France as well as the Basilica of Santa Maria Novella (Florence, Italy) and the Basilique Sainte-Marie-Madeleine de Vézelay (Burgundy, France).
+After traveling Europe multiple times within the last two years, I had an idea of modeling a basilica and placing some of my own digital sculptures within it. I was inspired by the Winged Victory of Samothrace at the Louvre in France as well as the Basilica of Santa Maria Novella (Florence, Italy) and the Basilique Sainte-Marie-Madeleine de Vézelay (Burgundy, France).
